System objects for k8s

--- a/3scale_k8s/base/kustomization.yaml
+++ b/3scale_k8s/base/kustomization.yaml
@@ -1,3 +1,6 @@
+configurations:
+  - config/varreference.yaml
+
 resources:
   - parameters-configmap.yaml
 
@@ -9,3 +12,11 @@ vars:
       apiVersion: v1
     fieldref:
       fieldpath: data.APP_LABEL
+
+  - name: SYSTEM_IMAGE
+    objref:
+      kind: ConfigMap
+      name: parameters
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.SYSTEM_IMAGE
