--- a/gcp/deployments/scale-base/projects/scale-saas-project.yaml
+++ b/gcp/deployments/scale-base/projects/scale-saas-project.yaml
@@ -14,6 +14,7 @@ resources:
         - monitoring.googleapis.com
         - logging.googleapis.com
         - iam.googleapis.com
+        - container.googleapis.com
 
       iam-policy-patch:
         add:
