Enable CloudSQL API for scale-saas

--- a/gcp/deployments/scale-base/projects/scale-saas-project.yaml
+++ b/gcp/deployments/scale-base/projects/scale-saas-project.yaml
@@ -15,6 +15,7 @@ resources:
         - logging.googleapis.com
         - iam.googleapis.com
         - container.googleapis.com
+        - sqladmin.googleapis.com
 
       iam-policy-patch:
         add:
