replaced inline variable with global definitionˆ

--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -26,7 +26,7 @@ SYSTEM_DATABASE_USER=mysql
 # SYSTEM_DATABASE_ROOT_PASSWORD= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
 
 # Internal 3scale API password for internal 3scale api auth.
-# SYSTEM_BACKEND_PASSWORD= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+SYSTEM_BACKEND_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 # Shared secret to import events from backend to system.
 # SYSTEM_BACKEND_SHARED_SECRET= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
