created k8s resources for zync

--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -43,9 +43,9 @@ SYSTEM_BACKEND_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=as
 #MASTER_ACCESS_TOKEN=`password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
 
 # Password for the Zync Database PostgreSQL connection user.
-# ZYNC_DATABASE_PASSWORD= `password: "{{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"`
-# ZYNC_SECRET_KEY_BASE= `password: "{{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"`
-# ZYNC_AUTHENTICATION_TOKEN= `password: "{{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"`
+ZYNC_DATABASE_PASSWORD="{{ lookup('password', './zync_database_password length=16 chars=ascii_letters,digits') }}"
+ZYNC_SECRET_KEY_BASE="{{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"
+ZYNC_AUTHENTICATION_TOKEN={{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"
 
 # Read Only Access Token that is APIcast going to use to download its configuration.
 # APICAST_ACCESS_TOKEN =`password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
