--- a/3scale_k8s/playbook/playbook.yml
+++ b/3scale_k8s/playbook/playbook.yml
@@ -6,3 +6,4 @@
       template: src={{ item }} dest=../resources/{{ item | basename | regex_replace('.j2','') }}
       with_fileglob:
         - ../backend/*.j2
+        - ../zync/*.j2
