Enable cloudkms for DB secrets

--- a/gcp/deployments/scale-base/projects/scale-saas-project.yaml
+++ b/gcp/deployments/scale-base/projects/scale-saas-project.yaml
@@ -16,6 +16,7 @@ resources:
         - iam.googleapis.com
         - container.googleapis.com
         - sqladmin.googleapis.com
+        - cloudkms.googleapis.com
 
       iam-policy-patch:
         add:
