Enable Service Networking API for scale-saas

--- a/gcp/deployments/scale-base/projects/scale-saas-project.yaml
+++ b/gcp/deployments/scale-base/projects/scale-saas-project.yaml
@@ -17,6 +17,7 @@ resources:
         - container.googleapis.com
         - sqladmin.googleapis.com
         - cloudkms.googleapis.com
+        - servicenetworking.googleapis.com
 
       iam-policy-patch:
         add:
