--- a/gcp/deployments/scale-saas/base-network.yaml
+++ b/gcp/deployments/scale-saas/base-network.yaml
@@ -17,3 +17,4 @@ resources:
             range: 10.60.12.0/22
           - name: pods
             range: 10.60.24.0/21
+    google-managed-services-range: 10.60.240.0/20
