Use standard HTTP/HTTPS ports in LoadBalancer

--- a/kubernetes/traefik.yaml
+++ b/kubernetes/traefik.yaml
@@ -146,13 +146,15 @@ spec:
   ports:
     - protocol: TCP
       name: web
-      port: 8000
+      port: 80
+      targetPort: 8000
     - protocol: TCP
       name: admin
       port: 8080
     - protocol: TCP
       name: websecure
-      port: 4443
+      port: 443
+      targetPort: 4443
   selector:
     app: traefik
 
@@ -171,7 +173,6 @@ metadata:
   name: traefik
   labels:
     app: traefik
-
 spec:
   replicas: 1
   selector:
