Fix typo un regexp

--- a/kubernetes/ingress-routes.yaml
+++ b/kubernetes/ingress-routes.yaml
@@ -25,7 +25,7 @@ spec:
     - name: apicast-production
       port: 8080
       passHostHeader: true
-  - match: HostRegexp(`domain:.*`)
+  - match: HostRegexp(`{domain:.*}`)
     kind: Rule
     services:
     - name: system-app
