--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -1,13 +1,14 @@
 
 [all:vars]
 WILDCARD_DOMAIN=hackfest.aws.mc.3sca.net
-ADMIN_EMAIL=yorgos@redhat.com
+MASTER_DOMAIN=master-account.hackfest.aws.mc.3sca.net
+TENANT_NAME=3scale
 
+ADMIN_EMAIL=yorgos@redhat.com
 
 APP_LABEL=3scale-api-management
 AMP_RELEASE=2.7
-TENANT_NAME=3scale
-RWX_STORAGE_CLASS=null
+RWX_STORAGE_CLASS=
 AMP_BACKEND_IMAGE=quay.io/3scale/apisonator:nightly
 AMP_ZYNC_IMAGE=quay.io/3scale/zync:nightly
 AMP_APICAST_IMAGE=quay.io/3scale/apicast:nightly
@@ -20,10 +21,10 @@ REDIS_IMAGE=centos/redis-32-centos7
 SYSTEM_DATABASE_USER=mysql
 
 # Password for the System's MySQL user.
-# SYSTEM_DATABASE_PASSWORD=  `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+SYSTEM_DATABASE_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 # System MySQL Root password.
-# SYSTEM_DATABASE_ROOT_PASSWORD= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+SYSTEM_DATABASE_ROOT_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 # Internal 3scale API password for internal 3scale api auth.
 SYSTEM_BACKEND_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
