--- a/3scale_k8s/system/system-config.yaml
+++ b/3scale_k8s/system/system-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app: $(APP_LABEL)
+    app: {{ APP_LABEL }}
     threescale_component: system
   name: system
 data:
