--- a/3scale_k8s/system/system-event-hooks-secret.yaml
+++ b/3scale_k8s/system/system-event-hooks-secret.yaml
@@ -6,6 +6,6 @@ metadata:
     threescale_component: system
   name: system-events-hook
 stringData:
-  PASSWORD: $(SYSTEM_BACKEND_SHARED_SECRET)
-  URL: http://system-master:3000/master/events/import
+  PASSWORD: {{ SYSTEM_BACKEND_SHARED_SECRET }}
+  URL: https://{{ MASTER_NAME }}:3000/master/events/import
 type: Opaque
