[WIP] fixed deployment errors related to k8s migration

--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -8,7 +8,7 @@ ADMIN_EMAIL=yorgos@redhat.com
 
 APP_LABEL=3scale-api-management
 AMP_RELEASE=2.7
-RWX_STORAGE_CLASS=
+RWX_STORAGE_CLASS=standard
 AMP_BACKEND_IMAGE=quay.io/3scale/apisonator:nightly
 AMP_ZYNC_IMAGE=quay.io/3scale/zync:nightly
 AMP_APICAST_IMAGE=quay.io/3scale/apicast:nightly
@@ -30,18 +30,18 @@ SYSTEM_DATABASE_ROOT_PASSWORD="{{ lookup('password', './passwordfile length=8 ch
 SYSTEM_BACKEND_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 # Shared secret to import events from backend to system.
-# SYSTEM_BACKEND_SHARED_SECRET= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+SYSTEM_BACKEND_SHARED_SECRET="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 # System application secret key base
-# SYSTEM_APP_SECRET_KEY_BASE= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+SYSTEM_APP_SECRET_KEY_BASE="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
-# ADMIN_PASSWORD= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+ADMIN_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 # Admin Access Token with all scopes and write permissions for API access.
-#ADMIN_ACCESS_TOKEN= `password: "{{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"`
+ADMIN_ACCESS_TOKEN="{{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"
 
-#MASTER_PASSWORD= `password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
-#MASTER_ACCESS_TOKEN=`password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+MASTER_PASSWORD="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
+MASTER_ACCESS_TOKEN="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 # Password for the Zync Database PostgreSQL connection user.
 ZYNC_DATABASE_PASSWORD="{{ lookup('password', './zync_database_password length=16 chars=ascii_letters,digits') }}"
@@ -49,25 +49,25 @@ ZYNC_SECRET_KEY_BASE="{{ lookup('password', './passwordfile length=16 chars=asci
 ZYNC_AUTHENTICATION_TOKEN={{ lookup('password', './passwordfile length=16 chars=ascii_letters,digits') }}"
 
 # Read Only Access Token that is APIcast going to use to download its configuration.
-# APICAST_ACCESS_TOKEN =`password: "{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"`
+APICAST_ACCESS_TOKEN="{{ lookup('password', './passwordfile length=8 chars=ascii_letters,digits') }}"
 
 SYSTEM_DATABASE=system
 SYSTEM_BACKEND_USERNAME=3scale_api_user
 ADMIN_USERNAME=admin
 MASTER_NAME=master
 MASTER_USER=master
-RECAPTCHA_PUBLIC_KEY=
-RECAPTCHA_PRIVATE_KEY=
+RECAPTCHA_PUBLIC_KEY="''"
+RECAPTCHA_PRIVATE_KEY="''"
 SYSTEM_REDIS_URL=redis://system-redis:6379/1
 SYSTEM_MESSAGE_BUS_REDIS_URL=redis://system-redis:6379/2
-SYSTEM_REDIS_NAMESPACE=
-SYSTEM_MESSAGE_BUS_REDIS_NAMESPACE=
+SYSTEM_REDIS_NAMESPACE="''"
+SYSTEM_MESSAGE_BUS_REDIS_NAMESPACE="''"
 
 APICAST_MANAGEMENT_API=status
 
 # Turn on/off the OpenSSL peer verification when downloading the configuration. Can be set to true/false.
-APICAST_OPENSSL_VERIFY=false
+APICAST_OPENSSL_VERIFY="'false'"
 # Enable logging response codes in APIcast.
-APICAST_RESPONSE_CODES=true
+APICAST_RESPONSE_CODES="'true'"
 # The URL to point to APIcast policies registry management
 APICAST_REGISTRY_URL=http://apicast-staging:8090/policies
