adapted RWX_STORAGE_CLASS for nfs-provisioner on cloud
ˆ

--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -8,7 +8,8 @@ ADMIN_EMAIL=yorgos@redhat.com
 
 APP_LABEL=3scale-api-management
 AMP_RELEASE=2.7
-RWX_STORAGE_CLASS=standard
+# `standard` for kind, `nfs` for k8s on the cloud
+RWX_STORAGE_CLASS=nfs
 AMP_BACKEND_IMAGE=quay.io/3scale/apisonator:nightly
 AMP_ZYNC_IMAGE=quay.io/3scale/zync:nightly
 AMP_APICAST_IMAGE=quay.io/3scale/apicast:nightly
