--- a/kubernetes/ingress-routes.yaml
+++ b/kubernetes/ingress-routes.yaml
@@ -6,19 +6,25 @@ spec:
   entryPoints:
     - web
   routes:
-  - match: Host(`backend-listener.hackfest.aws.mc.3sca.net`)
+  - match: HostRegexp(`{domain:traefik.hackfest.[a-z]+.mc.3sca.net}`)
+    kind: Rule
+    services:
+    - name: traefik
+      port: 8080
+      passHostHeader: true
+  - match: HostRegexp(`{domain:backend-listener..hackfest.[a-z]+.mc.3sca.net}`)
     kind: Rule
     services:
     - name: backend-listener
       port: 3000
       passHostHeader: true
-  - match: HostRegexp(`{prefix:.*}-apicast-staging.hackfest.aws.mc.3sca.net`)
+  - match: HostRegexp(`{domain:.*-apicast-staging.hackfest.[a-z]+.mc.3sca.net}`)
     kind: Rule
     services:
     - name: apicast-staging
       port: 8080
       passHostHeader: true
-  - match: HostRegexp(`{prefix:.*}-apicast-production.hackfest.aws.mc.3sca.net`)
+  - match: HostRegexp(`{domain:.*-apicast-production.hackfest.[a-z]+.mc.3sca.net}`)
     kind: Rule
     services:
     - name: apicast-production
@@ -27,7 +33,7 @@ spec:
   - match: HostRegexp(`{domain:.*}`)
     kind: Rule
     services:
-    - name: system
+    - name: system-master
       port: 3000
       passHostHeader: true
 
@@ -41,19 +47,26 @@ spec:
     - websecure
   tls: {}
   routes:
-  - match: Host(`backend-listener.hackfest.aws.mc.3sca.net`)
+
+  - match: HostRegexp(`{domain:traefik.hackfest.[a-z]+.mc.3sca.net}`)
+    kind: Rule
+    services:
+    - name: traefik
+      port: 8080
+      passHostHeader: true
+  - match: HostRegexp(`{domain:backend-listener..hackfest.[a-z]+.mc.3sca.net}`)
     kind: Rule
     services:
     - name: backend-listener
       port: 3000
       passHostHeader: true
-  - match: HostRegexp(`{prefix:.*}-apicast-staging.hackfest.aws.mc.3sca.net`)
+  - match: HostRegexp(`{domain:.*-apicast-staging.hackfest.[a-z]+.mc.3sca.net}`)
     kind: Rule
     services:
     - name: apicast-staging
       port: 8080
       passHostHeader: true
-  - match: HostRegexp(`{prefix:.*}-apicast-production.hackfest.aws.mc.3sca.net`)
+  - match: HostRegexp(`{domain:.*-apicast-production.hackfest.[a-z]+.mc.3sca.net}`)
     kind: Rule
     services:
     - name: apicast-production
@@ -62,18 +75,6 @@ spec:
   - match: HostRegexp(`{domain:.*}`)
     kind: Rule
     services:
-    - name: system
+    - name: system-master
       port: 3000
       passHostHeader: true
-  # - kind: Rule
-  #   match: Host(`nginx.aws.mc.3sca.net`)
-  #   services:
-  #   - name: nginx
-  #     passHostHeader: true
-  #     port: 80
-  # - kind: Rule
-  #   match: HostRegexp(`{domain:.*}`)
-  #   services:
-  #   - name: kuard
-  #     passHostHeader: true
-  #     port: 8080
