moved generated passwords / secrets to separate dir, which git ignores

--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -24,35 +24,35 @@ REDIS_IMAGE=centos/redis-32-centos7
 SYSTEM_DATABASE_USER=mysql
 
 # Password for the System's MySQL user.
-SYSTEM_DATABASE_PASSWORD="{{ lookup('password', './system_db_password length=8 chars=ascii_letters,digits') }}"
+SYSTEM_DATABASE_PASSWORD="{{ lookup('password', './passwords/system_db_password length=8 chars=ascii_letters,digits') }}"
 
 # System MySQL Root password.
-SYSTEM_DATABASE_ROOT_PASSWORD="{{ lookup('password', './system_db_root_password length=8 chars=ascii_letters,digits') }}"
+SYSTEM_DATABASE_ROOT_PASSWORD="{{ lookup('password', './passwords/system_db_root_password length=8 chars=ascii_letters,digits') }}"
 
 # Internal 3scale API password for internal 3scale api auth.
-SYSTEM_BACKEND_PASSWORD="{{ lookup('password', './system_backend_password length=8 chars=ascii_letters,digits') }}"
+SYSTEM_BACKEND_PASSWORD="{{ lookup('password', './passwords/system_backend_password length=8 chars=ascii_letters,digits') }}"
 
 # Shared secret to import events from backend to system.
-SYSTEM_BACKEND_SHARED_SECRET="{{ lookup('password', './system_backend_secret length=8 chars=ascii_letters,digits') }}"
+SYSTEM_BACKEND_SHARED_SECRET="{{ lookup('password', './passwords/system_backend_secret length=8 chars=ascii_letters,digits') }}"
 
 # System application secret key base
-SYSTEM_APP_SECRET_KEY_BASE="{{ lookup('password', './system_secret length=8 chars=ascii_letters,digits') }}"
+SYSTEM_APP_SECRET_KEY_BASE="{{ lookup('password', './passwords/system_secret length=8 chars=ascii_letters,digits') }}"
 
-ADMIN_PASSWORD="{{ lookup('password', './admin_password length=8 chars=ascii_letters,digits') }}"
+ADMIN_PASSWORD="{{ lookup('password', './passwords/admin_password length=8 chars=ascii_letters,digits') }}"
 
 # Admin Access Token with all scopes and write permissions for API access.
-ADMIN_ACCESS_TOKEN="{{ lookup('password', './admin_token length=16 chars=ascii_letters,digits') }}"
+ADMIN_ACCESS_TOKEN="{{ lookup('password', './passwords/admin_token length=16 chars=ascii_letters,digits') }}"
 
-MASTER_PASSWORD="{{ lookup('password', './master_password length=8 chars=ascii_letters,digits') }}"
-MASTER_ACCESS_TOKEN="{{ lookup('password', './master_token length=8 chars=ascii_letters,digits') }}"
+MASTER_PASSWORD="{{ lookup('password', './passwords/master_password length=8 chars=ascii_letters,digits') }}"
+MASTER_ACCESS_TOKEN="{{ lookup('password', './passwords/master_token length=8 chars=ascii_letters,digits') }}"
 
 # Password for the Zync Database PostgreSQL connection user.
-ZYNC_DATABASE_PASSWORD="{{ lookup('password', './zync_database_password length=16 chars=ascii_letters,digits') }}"
-ZYNC_SECRET_KEY_BASE="{{ lookup('password', './zync_secret length=16 chars=ascii_letters,digits') }}"
-ZYNC_AUTHENTICATION_TOKEN={{ lookup('password', './zync_token length=16 chars=ascii_letters,digits') }}"
+ZYNC_DATABASE_PASSWORD="{{ lookup('password', './passwords/zync_database_password length=16 chars=ascii_letters,digits') }}"
+ZYNC_SECRET_KEY_BASE="{{ lookup('password', './passwords/zync_secret length=16 chars=ascii_letters,digits') }}"
+ZYNC_AUTHENTICATION_TOKEN={{ lookup('password', './passwords/zync_token length=16 chars=ascii_letters,digits') }}"
 
 # Read Only Access Token that is APIcast going to use to download its configuration.
-APICAST_ACCESS_TOKEN="{{ lookup('password', './apicast_token length=8 chars=ascii_letters,digits') }}"
+APICAST_ACCESS_TOKEN="{{ lookup('password', './passwords/apicast_token length=8 chars=ascii_letters,digits') }}"
 
 SYSTEM_DATABASE=system
 SYSTEM_BACKEND_USERNAME=3scale_api_user
