moved to nfs storage everywhere for the demo use case this repo is for

--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -10,7 +10,7 @@ ADMIN_EMAIL=yorgos@redhat.com
 
 APP_LABEL=3scale-api-management
 AMP_RELEASE=2.7
-# `standard` for kind, `nfs` for k8s on the cloud
+# `nfs` since we'll be deploying the NFS dynamic provisioner
 RWX_STORAGE_CLASS=nfs
 AMP_BACKEND_IMAGE=quay.io/3scale/apisonator:nightly
 AMP_ZYNC_IMAGE=quay.io/3scale/zync:nightly
