--- a/3scale_k8s/playbook/localhost.ini
+++ b/3scale_k8s/playbook/localhost.ini
@@ -1,7 +1,7 @@
 
 [all:vars]
-WILDCARD_DOMAIN=hackfest.gcp.mc.3sca.net
-MASTER_DOMAIN=master-account.hackfest.gcp.mc.3sca.net
+WILDCARD_DOMAIN=127.0.0.1.nip.io
+MASTER_DOMAIN=master-account.{{ WILDCARD_DOMAIN }}
 MASTER_SUBDOMAIN=master-account
 
 TENANT_NAME=3scale
